feat: added logic to check how the promise works under the hood

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
   <body>
     <h1>Asynchronous Js</h1>
   </body>
-  <script src="./setTimeout.js"></script>
+  <!-- <script src="./setTimeout.js"></script> -->
+  <!-- <script src="./microtask.js"></script> -->
+  <!-- <script src="./asyncAwait.js"></script> -->
+  <script src="./generatorAsynAwait.js"></script>
 </html>
